--- a/legomindstorm/C api/Lego MindStorm Control Api/Lego MindStorm Control Api/Lego MindStorm Control Api.csproj
+++ b/legomindstorm/C api/Lego MindStorm Control Api/Lego MindStorm Control Api/Lego MindStorm Control Api.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AForge.Robotics.Lego, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5f361631ec856b74, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\AForge.NET\AForge.Robotics.Lego.dll</HintPath>
+    </Reference>
     <Reference Include="MySql.Data, Version=6.0.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
